Create endpoint get type events (#125)
